# tigerencode

./: README.md  pyproject.toml
tigerencode/: __init__.py  adaptor.py  config.py  init.py  model.py
tigerencode/backend_img/: __init__.py  base.py  hf.py  timm.py  xray.py
tigerencode/backend_text/: __init__.py  base.py  hf.py
